<resources>
    <string name="app_name">TowerOfHanoi</string>
    <string name="Welcome">Welcome To Play This Game</string>
    <string name="tip1">You can choose a dish to hold it</string>
    <string name="tip2">Dishes can only be placed on bigger one</string>
    <string name="tip3">You can hold only one dish </string>
    <string name="player_id">Please Input Your ID Here</string>
    <string name="start_game">Press Here To Start Game</string>
    <string name="no">No.</string>
    <string name="level">Level</string>
    <string name="error">Error!You can not hold a dish from this tower</string>
    <string name="restart_game">Restart</string>
    <string name="exit_game">Exit</string>
    <string name="record_title">Record List</string>
    <string name="default_id">Harbourside</string>
    <string name="default_record">123456</string>
    <string name="dialog_title">Congratulations</string>
    <string name="dialog_message">Next Level Or Not?</string>
    <string name="dialog_positive">Next</string>
    <string name="dialog_negative">Quit</string>
    <string name="exit_dialog_title">Exit</string>
    <string name="exit_dialog_message">Are You Sure To Exit?</string>
    <string name="exit_dialog_positive">Yes,I am sure</string>
    <string name="exit_dialog_negative">No,I am not</string>
    <string name="restart_dialog_title">Restart</string>
    <string name="restart_dialog_message">Are You Sure To Restart?</string>
    <string name="restart_dialog_positive">Yes,I am sure</string>
    <string name="restart_dialog_negative">No,I am not</string>
    <string name="report_error">You Can Not Place A Big Dish Upon A Small One</string>
</resources>
